apps/base/webgoat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgoat
  namespace: webgoat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgoat
  template:
    metadata:
      labels:
        app: webgoat
    spec:
      containers:
        - name: webgoat
          image: "webgoat/webgoat:v2025.3"
          ports:
          - containerPort: 8080
          - containerPort: 9090
